--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1939,36 +1939,6 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
 .shuffle-item .project-img-container:hover:after {
   opacity: 1;
 }
-
-.shuffle-wrapper .shuffle-item {
-  display: none;
-}
-
-.shuffle-wrapper .shuffle-item:nth-child(-n+10) {
-  display: block;
-}
-
-.loader {
-  display: none; /* Hidden by default */
-  position: fixed;
-  left: 50%;
-  top: calc(100% + 20px); /* Adjust the value as needed to position just after the section */
-  transform: translate(-50%, -50%);
-  z-index: 999;
-  width: 50px;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  border: 8px solid;
-  border-color: #000 #0000;
-  animation: l1 1s infinite;
-}
-
-@keyframes l1 {
-  to {
-    transform: rotate(.5turn);
-  }
-}
-
 .shuffle-item .project-img-container .gallery-popup .gallery-icon {
   position: absolute;
   top: 0;
@@ -2166,8 +2136,12 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
 }
 
 .clients-logo img {
-  filter: grayscale(100%);
-  filter: gray;
+  max-width: 100%;
+  height: auto;
+  width: 100px; /* Set a consistent width */
+  height: 100px; /* Set a consistent height */
+  -o-object-fit: contain;
+     object-fit: contain; /* Ensure the logo fits within the dimensions without distortion */
 }
 
 /* Testimonial
@@ -3407,28 +3381,3 @@ label {
   font-weight: 700;
 }
 /*# sourceMappingURL=style.css.map */
-
-.google-map {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio */
-}
-
-.google-map iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
-}
-
-/* Adjustments for mobile screens */
-@media (max-width: 600px) {
-  .google-map {
-      padding-bottom: 75%; /* Adjust aspect ratio for mobile if needed */
-  }
-}
-
