--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1887,6 +1887,12 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   width: 100%;
   border-bottom: 3px solid #ffb600;
 }
+
+.hidden-project {
+  display: none;
+}
+
+
 .shuffle-btn-group label {
   display: inline-block;
   color: #212121;
